[build-system]
requires = [
    "hatchling",
    "hatch-requirements-txt",
    "wheel",
]
build-backend = "hatchling.build"

[project]
name = "lofarimaging"
version = "2.0.0dev"
authors = [
  { name="Cees Bassa", email="bassa@astron.nl"},
  { name="Vanessa Moss"},
  { name="Michiel Brentjens" },
  { name="Tammo Jan Dijkema" },
  { name="Maaijke Mevius" },
]
description = "LOFAR imaging utilities updated for LOFAR2.0"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/cbassa/lofarimaging"
Issues = "https://github.com/cbassa/lofarimaging/issues"


[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]


[tool.hatch.build.targets.wheel]
packages = ["lofarimaging/"]
